--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "express": "^4.17.3",
-    "tsc": "^2.0.4"
+    "tsc": "^2.0.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
