--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "csv-parse": "^4.15.3",
     "express": "^4.17.3",
     "multer": "^1.4.4",
+    "swagger-ui-express": "^4.3.0",
     "tsc": "^2.0.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
